--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
   <a href="#" onclick="showSection('reset', event)">🔄 Reset HWID</a>
   <a href="#" onclick="showSection('sendmsg', event)">✉️ Send Message</a>
   <a href="#" onclick="showSection('project', event)">📁 Project</a>
-  <a href="#" onclick="showSection('license', event)">🔑 License Manager</a>
+  <a href="#" onclick="protectedOpen(() => showSection('license', event))">🔑 License Manager</a>
   <a href="/logout" style="margin-top:auto;">🚪 Logout</a>
 </div>
 
