--- a/templates/index.html
+++ b/templates/index.html
@@ -241,7 +241,7 @@
     </div>
   </form>
 
-  <form onsubmit="sendMessage(event)" classs="mb-3">
+  <form onsubmit="sendMessage(event)" class="mb-3">
     <textarea required class="form-control mb-2" rows="2" placeholder="Type message..." id="message_text"></textarea>
     <button class="btn btn-primary">Send</button>
   </form>
