--- a/templates/login.html
+++ b/templates/login.html
@@ -130,31 +130,6 @@ body {
     border-color: #ff2b2b;
     color: #ff2b2b;
 }
-    .card-container {
-  perspective: 1000px;
-}
-
-.card-inner {
-  position: relative;
-  width: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
-
-.card-front,
-.card-back {
-  position: absolute;
-  width: 100%;
-  backface-visibility: hidden;
-}
-
-.card-back {
-  transform: rotateY(180deg);
-}
-
-.card-inner.flipped {
-  transform: rotateY(180deg);
-}
 </style>
 </head>
 
@@ -165,17 +140,13 @@ body {
     <div class="logo">FR <span>CONSOLE</span></div>
     <div class="subtitle">Secure authentication required</div>
 
-   <div class="card-container">
-  <div class="card-inner" id="cardInner">
-
-    <!-- FRONT SIDE -->
-    <div class="card-front">
-      <form method="POST">
+    <form method="POST">
         <input type="text" class="form-control" placeholder="Username" name="username" required>
         <input type="password" class="form-control" placeholder="Password" name="password" required>
 
         <div class="links">
-          <a href="#" onclick="flipCard()">Use License Key</a>
+            <a href="#">Create account</a>
+            <a href="#">Forgot password?</a>
         </div>
 
         <button class="btn btn-danger w-100 btn-login">Log In →</button>
@@ -183,46 +154,21 @@ body {
         {% if error %}
         <div class="alert alert-danger mt-3">{{ error }}</div>
         {% endif %}
-      </form>
-    </div>
+    </form>
 
-    <!-- BACK SIDE -->
-    <div class="card-back">
-      <form method="POST">
-        <input type="text" class="form-control" placeholder="Enter License Key" name="license_key" required>
+    <div class="divider">COMMUNITY</div>
 
-        <div class="links">
-          <a href="#" onclick="flipCard()">Back to Username</a>
-        </div>
-
-        <button class="btn btn-danger w-100 btn-login">
-          Login with License →
+    <div class="socials">
+        <button class="social-btn" onclick="window.open('https://discord.gg/JjdDagrkvX', '_blank')">
+            <i class="fa-brands fa-discord"></i>
         </button>
-      </form>
+
+        <button class="social-btn" onclick="window.open('https://guns.lol/shubh.', '_blank')">
+            <i class="fa-solid fa-gun"></i>
+        </button>
     </div>
 
-  </div>
 </div>
-
-<div class="divider">COMMUNITY</div>
-
-<div class="socials">
-    <button class="social-btn" onclick="window.open('https://discord.gg/JjdDagrkvX', '_blank')">
-        <i class="fa-brands fa-discord"></i>
-    </button>
-
-    <button class="social-btn" onclick="window.open('https://guns.lol/shubh.', '_blank')">
-        <i class="fa-solid fa-gun"></i>
-    </button>
-</div>
-
-</div>
-
-<script>
-function flipCard(){
-  document.getElementById("cardInner").classList.toggle("flipped");
-}
-</script>
 
 </body>
 </html>
